@@ -2,6 +2,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==03/07/2010==
 Derision: Fix for temporary items on merchants appearing to increase in price.
+Leere: Refinement to above and fix for purchase price of stacked items != displayed price * quantity.
 
 ==03/05/2010==
 Trevius: Inspecting SoF players is now possible.
